<resources>
    <string name="app_name">My Application</string>
    <string name="contacts">contacts</string>
    <string name="calls">calls</string>
    <string name="chats">chats</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_price">Total Price</string>
    <string name="cancel">cancel</string>
    <string name="done">done</string>
    <string name="finish_dialog_title">Do you want to finish the order?</string>
    <string name="finish_dialog_message">Clicking \"Yes\" will finish creating the order and you can\'t go back to modify it</string>
    <string name="yes">Yes</string>
    <string name="dissmiss">Dissmiss</string>
    <string name="cancel_dialog_title">SURE</string>
    <string name="cancel_dialog_message">Are you sure you want to cancel the order?</string>
    <string name="next">Next</string>
    <string name="lets_go">Let\'s Go</string>
    <string name="arabic">العربية</string>
    <string name="english">english</string>
    <string name="language_dialog_title">Please Select Language!</string>
    <string name="language_dialog_message">من فضلك قم باختيار اللغة!</string>
    <string name="custom_your_burger">CUSTOM YOUR BURGER</string>
    <string name="developed_with_love">Developed With Love</string>
    <string name="wiz">"WIZ For Smart Technology "</string>
    <string name="by_wiz">By WIZ for smart technology</string>
    <string name="url">WIZ-TECH.CO</string>
    <string name="please_enter_name">Please Name Your Meal</string>
    <string name="hungry_buten">Hungry Buten</string>
    <string name="hb_url">hungrybuten.ps</string>
    <string name="wiz_tech">WIZ for smart technology</string>
    <string name="go_to_cahier">"Thanks!, Please Go to casheir to  Finish the order "</string>
    <string name="reset">Reset</string>
</resources>