<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg">


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="20dp"
            android:background="#00000000"
            android:foregroundGravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_enableMergePathsForKitKatAndAbove="true"
            app:lottie_fileName="language.json"
            app:lottie_loop="true"
            app:lottie_speed="1" />


        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="-30dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@string/language_dialog_title"
            android:textColor="@color/white"
            android:textSize="@dimen/dialog_text_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/animation_view" />


        <TextView
            android:id="@+id/body"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"

            android:text="@string/language_dialog_message"
            android:textColor="#E6FFFFFF"
            android:textSize="@dimen/dialog_text_body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"

            android:layout_marginBottom="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/body"
            tools:layout_editor_absoluteX="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/english"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginStart="48dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="48dp"
                android:background="@drawable/button_rounded"
                android:text="@string/english"
                android:textSize="88dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/arabic" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/arabic"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginStart="48dp"

                android:layout_marginTop="48dp"
                android:layout_marginEnd="48dp"
                android:background="@drawable/button_rounded"
                android:text="@string/arabic"
                android:textSize="88dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>