<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/hf_dialog_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginEnd="20dp"
            android:background="#00000000"
            android:foregroundGravity="center"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_enableMergePathsForKitKatAndAbove="true"
            app:lottie_fileName="done.json"
            app:lottie_loop="true"
            app:lottie_speed="0.5"
            tools:layout_editor_absoluteY="9dp" />


        <TextView
            android:id="@+id/title"
            android:layout_width="1200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:maxWidth="1100dp"
            android:text="@string/language_dialog_title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dialog_text_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />


        <TextView
            android:id="@+id/body"
            android:layout_width="1300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:maxWidth="1100dp"

            android:text="@string/language_dialog_message"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dialog_text_body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="190dp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="190dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextProductName">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/negative"
                android:layout_width="900dp"
                android:layout_height="250dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:text="@string/english"
                android:textColor="@color/dark_gray"
                android:textSize="88dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/positive"
                android:layout_width="900dp"
                android:layout_height="250dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_rounded"
                android:backgroundTint="@color/custom_gray"
                android:backgroundTintMode="add"
                android:text="@string/arabic"
                android:textColor="@color/yellow"

                android:textSize="88dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/animation_view"
            app:srcCompat="@drawable/bill_icon" />

        <EditText
            android:id="@+id/editTextTextProductName"
            android:layout_width="1500dp"
            android:layout_height="280dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/ed_rounded"
            android:ems="10"
            android:padding="30dp"

            android:hint="@string/please_enter_name"
            android:inputType="textPersonName"
            android:textColorHint="#A4080807"
            android:textSize="90dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/body" />

        <TextView
            android:id="@+id/totalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="350dp"
            android:layout_marginBottom="100dp"
            android:text="120"
            android:textColor="@android:color/black"
            android:textSize="250sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/totalPrice"
            app:layout_constraintStart_toEndOf="@+id/totalPrice"
            app:layout_constraintTop_toTopOf="@+id/totalPrice"
            app:srcCompat="@drawable/ic_shekel" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:text="@string/total_price"
            android:textColor="@android:color/black"
            android:textSize="88sp"
            app:layout_constraintBottom_toBottomOf="@+id/totalPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/totalPrice" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="-1dp"
        android:layout_marginBottom="500dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout3"
        app:srcCompat="@drawable/hf_circle_rt" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-1dp"
        android:layout_marginBottom="500dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout3"
        app:srcCompat="@drawable/hf_circle_lf" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView14"
        app:layout_constraintEnd_toStartOf="@+id/imageView14"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="@+id/imageView14"
        app:srcCompat="@drawable/dash_line" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>