<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="100dp"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/border_bk"

            tools:context=".ui.InvoiceActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_middle_tail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="700dp"
                    android:layout_height="700dp"
                    android:layout_marginTop="150dp"
                    android:layout_marginBottom="150dp"
                    app:layout_constraintBottom_toTopOf="@+id/textView4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_jo_bw" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="1200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="150dp"
                    android:fontFamily="@font/kabrio"
                    android:gravity="center"
                    android:text="@string/go_to_cahier"

                    android:textColor="@color/white"
                    android:textSize="88dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:background="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="200dp"
                android:layout_marginEnd="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />

            <TextView
                android:id="@+id/component_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="150dp"
                android:textColor="@android:color/black"
                android:textSize="88dp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout6" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:background="@android:color/black"
                android:paddingTop="100dp"
                app:layout_constraintTop_toBottomOf="@+id/totalPrice">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="400dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="50dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView3"
                    app:srcCompat="@drawable/ic_hb_bw" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/hungry_buten"
                    android:textColor="@color/white"
                    android:textSize="60dp"
                    app:layout_constraintBottom_toTopOf="@+id/textView5"
                    app:layout_constraintStart_toEndOf="@+id/imageView3" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginBottom="80dp"
                    android:text="@string/hb_url"
                    android:textColor="@color/white"
                    android:textSize="60dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView3" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/wiz_tech"
                    android:textColor="@color/white"
                    android:textSize="60dp"
                    app:layout_constraintBottom_toTopOf="@+id/textView16"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginBottom="80dp"
                    android:text="@string/url"
                    android:textColor="@color/white"
                    android:textSize="60dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView16" />

                <ImageView
                    android:id="@+id/imageView16"
                    android:layout_width="250dp"
                    android:layout_height="300dp"
                    android:layout_marginEnd="50dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView16"
                    app:layout_constraintEnd_toStartOf="@+id/textView15"
                    app:layout_constraintTop_toTopOf="@+id/textView15"
                    app:srcCompat="@drawable/wiz_icon" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView">

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="500dp"
                    app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/hf_circle_rt" />

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3326dp"
                    android:layout_marginBottom="500dp"
                    app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
                    app:layout_constraintStart_toEndOf="@+id/imageView11"
                    app:layout_constraintStart_toStartOf="@+id/constraintLayout3"
                    app:srcCompat="@drawable/hf_circle_lf" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView14"
                    app:layout_constraintEnd_toStartOf="@+id/imageView14"
                    app:layout_constraintStart_toEndOf="@+id/imageView13"
                    app:layout_constraintTop_toTopOf="@+id/imageView14"
                    app:srcCompat="@drawable/dash_line" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/totalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:layout_marginEnd="30dp"
                android:text="00"
                android:textColor="@android:color/black"
                android:textSize="120dp"
                app:layout_constraintEnd_toStartOf="@+id/imageView17"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout6" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="150dp"
                app:layout_constraintBottom_toBottomOf="@+id/totalPrice"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/totalPrice"
                app:srcCompat="@drawable/ic_shekel" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>